--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
-      name="Kysapka Web Chat"
-      content="Kysapka Web Chat created by react APP and use Firebase"
+      name="Kysapka_Web_Chat"
+      content="Kysapka_WebChat_created_by_react_APP_and_use_Firebase"
     />
-    <title>Kysapka Web Chat</title>
+    <title>Kysapka_Web_Chat</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
